--- a/bst/src/index.css
+++ b/bst/src/index.css
@@ -5,6 +5,17 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #343541;
+  color: #ffffff;
+}
+
+.page-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: calc(100vh - 120px); /* Account for header and footer */
+  padding: 2rem;
 }
 
 code {
